--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@ngx-translate/http-loader": "^7.0.0",
     "bootstrap": "^5.3.8",
     "firebase": "^9.23.0",
+    "ngx-quill": "^18.0.0",
     "ngx-toastr": "^14.3.0",
+    "quill": "^1.3.7",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -36,6 +38,7 @@
     "@angular/compiler-cli": "^14.2.0",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^20.11.30",
+    "@types/quill": "^1.3.10",
     "dotenv": "^17.2.3",
     "dotenv-cli": "^11.0.0",
     "dotenv-expand": "^12.0.3",
