--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ngx-toastr": "^14.3.0",
     "quill": "^1.3.7",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.26.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
